# mcp-factory

./: .gitignore  README.md  distribution-runbook.md  hub_server.py  package-lock.json  pyproject.toml  registry.json  server.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/: fastmcp_example.yaml  fleet_health.yaml  fleet_health_server.py  node_example.yaml
mcp_factory/: __init__.py  __main__.py  cli.py  config.py  generator.py  manifest.py  scan.py  workflow_runner.py
mcp_factory/runtime/: __init__.py  hub.py  registry.py  subprocess_adapter.py  watcher.py
mcp_factory/templates/: node_server.js.j2  python_fastmcp.j2  python_server.py.j2
scripts/: check_readme_counts.py  register_hub.py  smoke_test_all_tools.py  smoke_test_hub.py
templates/: node_server.js.j2  python_fastmcp.j2
tests/: test_check_readme_counts.py  test_fastmcp_template.py  test_generator.py  test_hub_cli.py  test_integration_fleet_health.py  test_manifest.py  test_mcp_pkg.py  test_node_template.py  test_packaged_templates.py  test_python_template.py  test_register_flag.py  test_registration.py  test_registry.py  test_scan.py  test_smoke_hub.py  test_subprocess_adapter.py  test_watcher.py  test_workflow_runner.py
tests/fixtures/: fleet_health.yaml  fleet_health_server.py  minimal.yaml  mock_mcp_server.py
