[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mcp-factory"
version = "0.1.0"
description = "Manifest-driven MCP server scaffolder and runtime hub for Claude tool integrations"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "fastmcp>=3.4.2"]
# Only needed to run servers generated with runtime.style: fastmcp — the
# factory itself (manifest/generator/hub) has no fastmcp import.
fastmcp = ["fastmcp>=3.4.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
