[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jaimenbell-mcp-factory"
version = "0.1.1"
readme = "README.md"
description = "Manifest-driven MCP server scaffolder and runtime hub for Claude tool integrations"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "mcp>=1.0",
]

[project.scripts]
mcp-factory-hub = "mcp_factory.cli:run"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "fastmcp>=3.4.2", "watchdog>=4.0"]
# Only needed to run servers generated with runtime.style: fastmcp — the
# factory itself (manifest/generator/hub) has no fastmcp import.
fastmcp = ["fastmcp>=3.4.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["mcp_factory*"]

[tool.setuptools.package-data]
mcp_factory = ["templates/*.j2"]
